--- a/project-vgl.html
+++ b/project-vgl.html
@@ -45,7 +45,7 @@
         <div class="project-background">
           <img
             class="project-background-img"
-            src="imgs/project1-background.png"
+            src="imgs/vglProject/project-vgl-background.png"
             alt="Project Background"
           />
         </div>
@@ -54,12 +54,10 @@
       <nav id="navbar">
         <a href="#section-problem">Problem</a>
         <a href="#section-goals">Goals</a>
+        <a href="#section-solution">Solution</a>
         <a href="#section-research">Research</a>
-        <a href="#section-target-group">Target Group</a>
-        <a href="#section-color-scheme">Color Scheme</a>
-        <a href="#section-layout">Layout</a>
-        <a href="#section-design-style">Design Style</a>
-        <a href="#third-section">Preview</a>
+        <a href="#section-interviews">Interviews</a>
+        <a href="#section-ideation">Ideation</a>
       </nav>
       <!-- Text Section -->
       <section id="second-section">
@@ -70,12 +68,12 @@
             <!-- Type of Product -->
             <div class="info-container">
               <p class="info-title">TYPE OF PROJECT</p>
-              <p class="info-content">Redesign</p>
+              <p class="info-content">Design</p>
             </div>
             <!-- Software Used -->
             <div class="info-container">
               <p class="info-title">SOFTWARE USED</p>
-              <p class="info-content">Photoshop</p>
+              <p class="info-content">Figma</p>
             </div>
           </div>
           <!-- Col 2 -->
@@ -89,7 +87,7 @@
             <!-- Date -->
             <div class="info-container">
               <p class="info-title">DATE</p>
-              <p class="info-content">January 2022</p>
+              <p class="info-content">May 2023</p>
             </div>
           </div>
         </div>
@@ -101,13 +99,17 @@
             <div class="section-title">Problem</div>
             <!-- Text Section -->
             <div class="section-text">
+              <p style="padding-bottom: 0">
+                In the gaming world, enthusiasts often face the challenge of
+                organizing and keeping track of their gaming experiences. With
+                an abundance of titles available, it's easy to lose sight of the
+                games you've played, their rankings, and your reviews.
+              </p>
               <p>
-                Casetify's home page was already good, but it had not received
-                any refreshment in a while. As a designer, I saw an opportunity
-                to improve the website's user experience and visual design. I
-                wanted to take advantage of the latest design trends and
-                technologies to create a more engaging and modern website that
-                would appeal to Casetify's target audience.
+                This website provides a tailored solution, offering users the
+                ability to systematically manage and review their gaming
+                collection, ensuring a more organized and enjoyable gaming
+                journey.
               </p>
             </div>
           </div>
@@ -117,15 +119,41 @@
             <div class="section-title">Goals</div>
             <!-- Text Section -->
             <div class="section-text">
-              <p>
-                The goal of the redesign was to improve the user flow and make
-                the design more appealing. I wanted to create a more intuitive
-                experience for our users, making it easier for them to find and
-                purchase the products they need. By updating the visual design,
-                I also aimed to create a more modern and engaging look and feel
-                for the website. Overall, I wanted to create a better user
-                experience that would increase engagement.
+              <p style="padding-bottom: 0">
+                The primary goal of this website is to empower gamers to take
+                control of their gaming experiences. It aims to provide a
+                user-friendly platform where gamers can efficiently organize,
+                rank, and review the games they've played. By offering a
+                seamless and intuitive interface, our objective is to enhance
+                the overall gaming experience and foster a sense of community
+                among gamers.
               </p>
+              <p>
+                The website aims to become a valuable resource for gamers of all
+                levels, helping them make informed decisions, discover new
+                titles, and create a curated gaming list that reflects their
+                unique preferences and tastes.
+              </p>
+            </div>
+          </div>
+          <!-- Solution -->
+          <div id="section-solution" class="project-text-section">
+            <!-- Title -->
+            <div class="section-title">Solution</div>
+            <!-- Image Section -->
+            <div class="section-images">
+              <img
+                class="app-img"
+                src="imgs/vglProject/vgl-solution-1.png"
+                alt="Homepage Guest Showcase"
+                style="padding-bottom: 2rem"
+              />
+              <img
+                class="app-img"
+                src="imgs/vglProject/vgl-solution-2.png"
+                alt="Home Page Showcase"
+                style="padding-bottom: 2rem"
+              />
             </div>
           </div>
           <!-- Research -->
@@ -135,13 +163,11 @@
             <!-- Text Section -->
             <div class="section-text">
               <p style="padding-bottom: 0">
-                To start, I researched the brand, mission, vision, and target
-                audience to gain a deeper understanding of the company's values
-                and goals. Then, I analyzed the existing homepage and studied
-                the competition to identify opportunities for improvement and
-                unique features.
+                The creation of this website was underpinned by a thorough
+                research phase, encompassing market analysis, competitor
+                research, and an in-depth exploration of user preferences.
               </p>
-              <p>
+              <p style="padding-bottom: 0">
                 User research was a critical part of the process, as it helped
                 me gather feedback and insights from Casetify's target audience.
                 I used wireframes and prototypes to iteratively design and
@@ -150,150 +176,100 @@
                 visual identity, I developed a design that aligned with
                 Casetify's brand guidelines.
               </p>
+              <p style="padding-bottom: 0">
+                I initiated the project with an extensive study of the gaming
+                industry to identify emerging trends and player behavior. This
+                was followed by a meticulous examination of existing competitors
+                to pinpoint gaps and opportunities in the market.
+              </p>
+              <p style="padding-bottom: 0">
+                Additionally, I conducted surveys and interviews with gamers to
+                gain valuable insights into their preferences and pain points
+                when it came to organizing their gaming experiences.
+              </p>
+              <p>
+                This research-driven approach guided the development process,
+                ensuring that the platform I designed effectively addressed the
+                specific needs and desires of our target audience.
+              </p>
             </div>
           </div>
-          <!-- Target Group -->
-          <div id="section-target-group" class="project-text-section">
+          <!-- Interviews -->
+          <div id="section-interviews" class="project-text-section">
             <!-- Title -->
-            <div class="section-title">Target Group</div>
+            <div class="section-title">Interviews</div>
             <!-- Text Section -->
             <div class="section-text">
               <p style="padding-bottom: 0">
-                Casetify's target group is primarily young, tech-savvy, and
-                fashion-conscious individuals who are looking for unique and
-                personalized accessories for their mobile devices. This group is
-                typically made up of millennials and Generation Z, who are
-                active on social media and value self-expression and
-                individuality.
+                Interviews played a pivotal role in my research efforts. I
+                engaged with gamers from diverse backgrounds and experience
+                levels to gain valuable firsthand insights into their gaming
+                habits and preferences.
+              </p>
+              <p style="padding-bottom: 0">
+                These one-on-one interviews allowed me to delve deep into the
+                challenges gamers face when managing their gaming experiences,
+                as well as their expectations from a platform designed to
+                address these issues. The interviews provided me with a rich and
+                nuanced understanding of user needs and desires, serving as a
+                critical foundation for shaping the features and functionalities
+                of the website.
               </p>
               <p>
-                Casetify's products are designed to appeal to this group by
-                offering a wide range of customizable designs, trendy patterns,
-                and stylish collaborations with popular brands and artists.
-                Additionally, Casetify's focus on sustainability and
-                eco-friendliness may also appeal to this target group, who are
-                increasingly interested in ethical and sustainable consumer
-                products.
+                By listening to the voices of gamers, I ensured that my platform
+                was tailored to meet their specific requirements and enhance
+                their overall gaming journey.
               </p>
             </div>
-            <!-- Image Section -->
-            <div class="section-images">
+            <div class="section-images big">
               <img
                 class="app-img"
-                src="imgs/project-casetify-moodboard.png"
+                src="imgs/vglProject/vgl-interviews.png"
                 alt="Mood Board Showcase"
                 style="padding-bottom: 2rem"
               />
             </div>
           </div>
-          <!-- Color Scheme -->
-          <div id="section-color-scheme" class="project-text-section">
+          <!-- Ideation -->
+          <div id="section-ideation" class="project-text-section">
             <!-- Title -->
-            <div class="section-title">Color Scheme</div>
+            <div class="section-title">Ideation</div>
             <!-- Text Section -->
             <div class="section-text">
               <p style="padding-bottom: 0">
-                Casetify's website primarily uses a bold and playful color
-                scheme, featuring a mix of bright, eye-catching colors.
+                During the ideation phase, I explored a wide range of creative
+                concepts and design directions to bring the project to life. I
+                brainstormed innovative solutions based on the challenges
+                identified in my research.
               </p>
               <p style="padding-bottom: 0">
-                The dominant colors used on Casetify's website are actually
-                white (#FFFFFF) and black (#000000). These two colors create a
-                clean and modern look that is consistent throughout the website.
-              </p>
-              <p style="padding-bottom: 0">
-                While there are certainly accent colors used on the website,
-                such as red, blue, and green, these colors are used more
-                sparingly and primarily to draw attention to specific elements,
-                such as buttons, important information and links.
+                This process involved sketching, wireframing, and prototyping
+                various user interface designs to visualize the user experience.
+                Collaborative sessions and feedback loops were instrumental in
+                refining these ideas, ensuring they aligned with the project's
+                goals and user needs.
               </p>
               <p>
-                Additionally, Casetify features a wide range of colorful product
-                images on their website, which further reinforces the brand's
-                fun and playful aesthetic. Overall, the use of bold and bright
-                colors helps to create a visually engaging and memorable
-                experience for users.
+                This creative exploration not only sparked fresh insights but
+                also fueled the development of a robust and user-centric website
+                that effectively addresses the unique demands of gamers.
               </p>
             </div>
             <!-- Image Section -->
             <div class="section-images">
               <img
-                class="app-img"
-                src="imgs/project-casetify-colorscheme.png"
-                alt="Color Scheme Showcase"
+                class="app-img half"
+                src="imgs/vglProject/vgl-ideation-1.png"
+                alt="Ideation One Showcase"
+                style="padding-bottom: 2rem"
+              />
+              <img
+                class="app-img half"
+                src="imgs/vglProject/vgl-ideation-2.png"
+                alt="Ideation Two Showcase"
                 style="padding-bottom: 2rem"
               />
             </div>
-          </div>
-          <!-- Layout -->
-          <div id="section-layout" class="project-text-section">
-            <!-- Title -->
-            <div class="section-title">Layout</div>
-            <!-- Text Section -->
-            <div class="section-text">
-              <p>
-                When creating the layout for my project, I started by defining
-                my goals and objectives for the page. I wanted to increase
-                engagement and build brand awareness, so I identified the key
-                content areas that would help me achieve these goals, including
-                promotions, perks, important items, latest arrivals, customer
-                opinions, community, and a newsletter subscription form. Next, I
-                worked on arranging these elements in a visually appealing and
-                easy-to-navigate way.
-              </p>
-            </div>
-            <!-- Image Section -->
-            <div class="section-images bigger-img">
-              <img
-                class="app-img"
-                src="imgs/project-casetify-layout1.png"
-                alt="Layout Showcase"
-                style="padding-bottom: 0"
-              />
-              <img
-                class="app-img"
-                src="imgs/project-casetify-layout2.png"
-                alt="Layout Showcase"
-                style="padding-bottom: 2rem; padding-top: 0"
-              />
-            </div>
-          </div>
-          <!-- Design Style -->
-          <div id="section-design-style" class="project-text-section">
-            <!-- Title -->
-            <div class="section-title">Design Style</div>
-            <!-- Text Section -->
-            <div class="section-text">
-              <p>
-                When designing my project, I wanted to create a style that was
-                modern, sleek, and visually appealing. I focused on using a
-                minimalist design approach, with clean lines and a simple color
-                palette to make the content stand out. I also incorporated bold
-                typography to add visual interest and hierarchy to the layout.
-                To create a cohesive look and feel, I used consistent branding
-                elements throughout the design, including typography and
-                imagery. By paying attention to the details and focusing on a
-                modern and minimalist style, I was able to create a visually
-                compelling design that effectively communicated the brand
-                message.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Preview Section -->
-      <section id="third-section">
-        <div class="section-title preview-title centered">Preview</div>
-        <!-- Preview -->
-        <div class="preview-container centered">
-          <div class="preview centered">
-            <img class="preview-screen" src="imgs/laptop.png" alt="Laptop" />
-          </div>
-          <div class="scroll-container">
-            <img src="imgs/scroll-icon.png" alt="Scroll Icon" />
-          </div>
-          <div class="preview-content">
-            <img class="full" src="imgs/preview1.png" alt="Preview of Site" />
           </div>
         </div>
       </section>
