--- a/project-vgl.html
+++ b/project-vgl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Casetify Redesign</title>
+    <title>TGL Project</title>
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/projectvgl.css" />
     <link rel="stylesheet" href="css/navbar.css" />
