final site adjustment

--- a/index.html
+++ b/index.html
@@ -85,13 +85,16 @@
             </div>
             <!-- Item 2 -->
             <div class="project-item">
-              <img src="imgs/project-casetify.png" alt="Project Icon" />
-              <a href="project-casetify.html">
+              <img src="imgs/seo/project-seo.png" alt="Project Icon" />
+              <a href="project-seo.html">
                 <div class="project-item-overlay">
-                  <h3 class="overlay-year">2022</h3>
+                  <h3 class="overlay-year">2023</h3>
                   <div class="overlay-container">
-                    <h2>Casetify<br />Home Page Redesign</h2>
-                    <h3>Fresh and modern redesign of the Casetify Home Page</h3>
+                    <h2>Casino En Ligne Nouveau</h2>
+                    <h3>
+                      A website where you can find detailed ratings and reviews
+                      of various casinos
+                    </h3>
                   </div>
                 </div>
               </a>
@@ -101,15 +104,15 @@
           <div class="projects-row">
             <!-- Item 1 -->
             <div class="project-item">
-              <img src="imgs/project-spotify.png" alt="Project Icon" />
-              <a href="project-spotify.html">
+              <img src="imgs/vglProject/project-vgl.png" alt="Project Icon" />
+              <a href="project-vgl.html">
                 <div class="project-item-overlay">
-                  <h3 class="overlay-year">2022</h3>
+                  <h3 class="overlay-year">2023</h3>
                   <div class="overlay-container">
-                    <h2>Spotify <br />Home Screen Redesign</h2>
+                    <h2>The Game List</h2>
                     <h3>
-                      A version of the current Spotify home screen that
-                      simpifies the user flow
+                      Gaming hub that empowers enthusiasts to track their played
+                      games
                     </h3>
                   </div>
                 </div>
@@ -117,15 +120,13 @@
             </div>
             <!-- Item 2 -->
             <div class="project-item">
-              <img src="imgs/project-biscfit.png" alt="Project Icon" />
-              <a href="project-biscfit.html">
+              <img src="imgs/project-casetify.png" alt="Project Icon" />
+              <a href="project-casetify.html">
                 <div class="project-item-overlay">
                   <h3 class="overlay-year">2022</h3>
                   <div class="overlay-container">
-                    <h2>Bisc-Fit</h2>
-                    <h3>
-                      Biscuits that solve the problem of tasteless healthy food
-                    </h3>
+                    <h2>Casetify<br />Home Page Redesign</h2>
+                    <h3>Fresh and modern redesign of the Casetify Home Page</h3>
                   </div>
                 </div>
               </a>
