--- a/project-seo.html
+++ b/project-seo.html
@@ -279,7 +279,7 @@
                 and intuitive user interfaces, added an invaluable layer to our
                 ideation process.
               </p>
-              <p>
+              <p style="padding-bottom: 0">
                 This collaborative effort ensured that not only were our ideas
                 innovative and user-centric but also aesthetically pleasing and
                 aligned with the broader design trends. The ideation phase
@@ -306,16 +306,16 @@
               src="imgs/project-wasteless.png"
               alt="First Project Picture"
           /></a>
-          <a href="project-spotify.html"
+          <a href="project-vgl.html"
             ><img
               class="other-project-picture"
-              src="imgs/project-spotify.png"
+              src="imgs/vglProject/project-vgl.png"
               alt="Second Project Picture"
           /></a>
-          <a href="project-biscfit.html"
+          <a href="project-casetify.html"
             ><img
               class="other-project-picture"
-              src="imgs/project-biscfit.png"
+              src="imgs/project-casetify.png"
               alt="Third Project Picture"
           /></a>
         </div>
