--- a/project-vgl.html
+++ b/project-vgl.html
@@ -287,16 +287,16 @@
               src="imgs/project-wasteless.png"
               alt="First Project Picture"
           /></a>
-          <a href="project-spotify.html"
+          <a href="project-seo.html"
             ><img
               class="other-project-picture"
-              src="imgs/project-spotify.png"
+              src="imgs/seo/project-seo.png"
               alt="Second Project Picture"
           /></a>
-          <a href="project-biscfit.html"
+          <a href="project-casetify.html"
             ><img
               class="other-project-picture"
-              src="imgs/project-biscfit.png"
+              src="imgs/project-casetify.png"
               alt="Third Project Picture"
           /></a>
         </div>
