--- a/project-casetify.html
+++ b/project-casetify.html
@@ -26,7 +26,7 @@
     <header class="header glass">
       <div class="left-section">
         <div class="gg-logo">
-          <a class="gg-link" href="index.html">Galina<br>Ganeva</a>
+          <a class="gg-link" href="index.html">Galina<br />Ganeva</a>
         </div>
       </div>
       <div class="right-section">
@@ -311,16 +311,16 @@
               src="imgs/project-wasteless.png"
               alt="First Project Picture"
           /></a>
-          <a href="project-spotify.html"
+          <a href="project-vgl.html"
             ><img
               class="other-project-picture"
-              src="imgs/project-spotify.png"
+              src="imgs/vglProject/project-vgl.png"
               alt="Second Project Picture"
           /></a>
-          <a href="project-biscfit.html"
+          <a href="project-seo.html"
             ><img
               class="other-project-picture"
-              src="imgs/project-biscfit.png"
+              src="imgs/seo/project-seo.png"
               alt="Third Project Picture"
           /></a>
         </div>
