--- a/project-seo.html
+++ b/project-seo.html
@@ -156,12 +156,12 @@
             <!-- Title -->
             <div class="section-title">Solution</div>
             <!-- Image Section -->
-            <div class="section-images big">
+            <div class="section-images big padding">
               <img
-                class="app-img"
+                class="app-img border"
                 src="imgs/seo/seo-solution.gif"
                 alt="Homepage Guest Showcase"
-                style="padding-bottom: 2rem"
+                style="padding: 0"
               />
             </div>
           </div>
